pkg/numaresourcesscheduler/manifests/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "secondary-scheduler"
  namespace: openshift-numaresources
  labels:
    app: "secondary-scheduler"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "secondary-scheduler"
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        app: "secondary-scheduler"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
      volumes:
        - name: "etckubernetes"
          configMap:
            name: ${CONFIGMAP}
      restartPolicy: "Always"
      containers:
        - name: "secondary-scheduler"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          image: ${IMAGE}
          resources:
            requests:
              cpu: "600m"
              memory: "1200Mi"
          command:
            - /bin/kube-scheduler
          args:
            - --config=/etc/kubernetes/config.yaml
          volumeMounts:
            - mountPath: "/etc/kubernetes"
              name: "etckubernetes"
            - mountPath: "/run/pfpstatus"
              name: "runpfpstatus"
      serviceAccountName: "secondary-scheduler"
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
      - name: "etckubernetes" # placeholder
      - name: "runpfpstatus"
        emptyDir:
          medium: Memory
          sizeLimit: 64Mi
