pkg/numaresourcesscheduler/manifests/yaml/networkpolicy.apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scheduler-egress-to-api-server
spec:
  podSelector:
    matchLabels:
      app: secondary-scheduler 
  egress:
  - ports:
    - protocol: TCP
      port: 6443 
  policyTypes:
  - Egress
