pkg/numaresourcesscheduler/manifests/yaml/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector:
    matchLabels:
      app: secondary-scheduler
  policyTypes:
  - Ingress
  - Egress
